@@ -4,6 +4,8 @@ CHANGE LOG
 
 2012-12-07 Thomas Holder <thomas.holder@schrodinger.com>
 
+	* speed up iterate and alter - https://sourceforge.net/p/pymol/patches/5/
+
 	* command line (Tk GUI) history improvements
 
 	* add angles to the Movie-Program-SceneLoop menu
